[package]
name = "vulkano_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.3"
egui_winit_vulkano = {git = "https://github.com/itmuckel/egui_winit_vulkano"}
gltf = { version = "1.0.0", features = ["extras", "names", "import"] }
ktx = "0.3.2"
nalgebra-glm = { version = "0.17.0", features = ["convert-bytemuck", "default"] }
rand = "0.8.5"
vulkano = {git = "https://github.com/Rua/vulkano", rev = "2070bb5ca8f3e6d31cef7b4d46b730cf7adb5c45"}
vulkano-shaders = {git = "https://github.com/Rua/vulkano", rev = "2070bb5ca8f3e6d31cef7b4d46b730cf7adb5c45"}
vulkano-win = {git = "https://github.com/Rua/vulkano", rev = "2070bb5ca8f3e6d31cef7b4d46b730cf7adb5c45"}
winit = "=0.27.5"

[profile.dev]
opt-level = 1
